tests/provider_havoc/provider_havoc.exp
Error -------------------------------------------------------------------------------------- provider_edge_cases.js:5:19

Cannot resolve name `console`. [cannot-resolve-name]

   5| if ((x => 42) === console.log) {
                        ^^^^^^^


Error --------------------------------------------------------------------------------------- provider_edge_cases.js:8:1

Cannot resolve name `f`. [cannot-resolve-name]

   8| f = function() {
      ^


Error ---------------------------------------------------------------------------------------- providers_closure.js:16:6

Cannot cast `x` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   providers_closure.js:16:6
   16|     (x: empty); // error, just to show that x is not empty
            ^

References:
   providers_closure.js:5:9
    5|     x = 21;
               ^^ [1]
   providers_closure.js:16:9
   16|     (x: empty); // error, just to show that x is not empty
               ^^^^^ [2]


Error ---------------------------------------------------------------------------------------- providers_closure.js:20:6

Cannot cast `x` to empty because number [1] is incompatible with empty [2]. [incompatible-cast]

   providers_closure.js:20:6
   20|     (x: empty); // error similarly
            ^

References:
   providers_closure.js:5:9
    5|     x = 21;
               ^^ [1]
   providers_closure.js:20:9
   20|     (x: empty); // error similarly
               ^^^^^ [2]


Error ---------------------------------------------------------------------------------------- providers_closure.js:21:6

Cannot cast `y` to number because null [1] is incompatible with number [2]. [incompatible-cast]

   providers_closure.js:21:6
   21|     (y: number); // error b/c y was fully havoced
            ^

References:
   providers_closure.js:3:19
    3| var x = null, y = null;
                         ^^^^ [1]
   providers_closure.js:21:9
   21|     (y: number); // error b/c y was fully havoced
               ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------- providers_closure.js:32:2

Cannot cast `z` to number because null [1] is incompatible with number [2]. [incompatible-cast]

   providers_closure.js:32:2
   32| (z: number); // should fail, initial type of z was null
        ^

References:
   providers_closure.js:25:9
   25| var z = null;
               ^^^^ [1]
   providers_closure.js:32:5
   32| (z: number); // should fail, initial type of z was null
           ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:10:22

Cannot assign `var_x` to `y` because null or undefined [1] is incompatible with number [2]. [incompatible-type]

   test.js:10:22
   10|       var y:number = var_x;
                            ^^^^^

References:
   test.js:5:15
    5| function g(x: ?number) {
                     ^^^^^^^ [1]
   test.js:10:13
   10|       var y:number = var_x;
                   ^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:23:4

Cannot cast `x` to undefined because number [1] is incompatible with undefined [2]. [incompatible-cast]

   test.js:23:4
   23|   (x: void); // should error
          ^

References:
   test.js:17:17
   17|   var x: void | number;
                       ^^^^^^ [1]
   test.js:23:7
   23|   (x: void); // should error
             ^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- test.js:33:6

Cannot cast `x` to number because string [1] is incompatible with number [2]. [incompatible-cast]

   test.js:33:6
   33|     (x: number); // should fail
            ^

References:
   test.js:27:19
   27|   var x: number | string = 42;
                         ^^^^^^ [1]
   test.js:33:9
   33|     (x: number); // should fail
               ^^^^^^ [2]



Found 9 errors
